# btcusdt-perp-live

./: .env.example  .gitignore  README.md  check_live.bat  pyproject.toml
tools/telemetry/: README.md  check.sh  pull.sh  report.py
